--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,8 @@
 name = "screenshot"
 version = "0.0.1"
 authors = ["Alex <alexchandel@gmail.com>"]
+description = "Get a bitmap image of any display."
+repository = "https://github.com/alexchandel/screenshot-rs"
+readme = "README.md"
+license = "Unlicense"
+
