--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ name = "screenshot"
 version = "0.0.1"
 authors = ["Alex <alexchandel@gmail.com>"]
 description = "Get a bitmap image of any display."
+keywords = ["graphics", "image"]
 repository = "https://github.com/alexchandel/screenshot-rs"
 readme = "README.md"
 license = "Unlicense"
