--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ repository = "https://github.com/alexchandel/screenshot-rs"
 readme = "README.md"
 license = "Unlicense"
 
+
+[dev-dependencies.bmp]
+bmp = "0.0.5"
