--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ repository = "https://github.com/alexchandel/screenshot-rs"
 readme = "README.md"
 license = "CC0-1.0"
 
+[target.x86_64-unknown-linux-gnu.dependencies.xlib]
+git = "https://github.com/servo/rust-xlib"
+[target.i686-unknown-linux-gnu.dependencies.xlib]
+git = "https://github.com/servo/rust-xlib"
+
 [dependencies]
 libc = "*"
 
