--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 
 name = "screenshot"
-version = "0.0.7"
-authors = ["Alex <alexchandel@gmail.com>"]
+version = "0.0.9"
+authors = ["Maxon"]
 description = "Get a bitmap image of any display."
 keywords = ["graphics", "image", "gui", "scripting"]
-repository = "https://github.com/alexchandel/screenshot-rs"
+repository = "https://github.com/LMA9/screenshot-rs"
 readme = "README.md"
 license = "CC0-1.0"
 
